--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Whatsapp API by Ngekoding</title>
+	<title>Whatsapp API Karisma</title>
 </head>
 <body>
 
 	<div id="app">
 		<h1>Whatsapp API</h1>
-		<p>Powered by Ngekoding</p>
-		<img src="" alt="QR Code" id="qrcode">
+		<p>Powered by LDK KARISMA</p>
+		<img src="" alt="Sedang memuat QR Code..." id="qrcode">
 		<h3>Logs:</h3>
 		<ul class="logs"></ul>
 	</div>
@@ -17,6 +17,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" crossorigin="anonymous"></script>
 	<script>
 		$(document).ready(function() {
+			$('#qrcode').hide();
+			
 			var socket = io();
 
 			socket.on('message', function(msg) {
